# my_opencv_project

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/opencv3/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker_jni.cpp  test.cpp
app/src/main/java/com/example/opencv3/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
opencv/src/main/java/org/opencv/samples/facedetect/: FdActivity.java
opencv/src/main/res/values/: strings.xml
